[package]
name = "num-irrational"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"

[dependencies.num-bigint]
optional = true
version = "0.4.3"
default-features = false

[dependencies.num-rational]
optional = true
version = "0.4.0"
default-features = false

[dependencies.num-prime]
optional = true
version = "0.0.1"
default-features = false
