[package]
name = "num-irrational"
version = "0.3.0-alpha"
edition = "2018"

repository = "https://github.com/cmpute/num-irrational"
keywords = ["math", "mathematics", "numerics", "numeric", "complex"]
categories = ["mathematics", "algorithms"]
license = "Apache-2.0"
description = """
`num-irrational` is based on `num` and extends it with support for several kinds of irrational numbers.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"
futures = { version = "0.3.0", optional = true }

[dependencies.num-bigint]
optional = true
version = "0.4.3"
default-features = false

[dependencies.num-rational]
version = "0.4.0"

[dependencies.num-complex]
optional = true
version = "0.4.0"
default-features = false

[features]
complex = []
async = []
# default = ["complex"] # TODO(v0.3): debug only

[package.metadata.docs.rs]
all-features = true
